tests/data/parseerror/invalid-constant-4.php
<?php

const INVALID_CONSTANT_4 = TRUE && FALSE;
